忽略文件提交

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,7 @@ _site
 .vscode
 .idea
 .DS_Store
+__shuo/projects/sixgod_shader/Library
+__shuo/projects/sixgod_shader/Logs
+__shuo/projects/sixgod_shader/Packages
+__shuo/projects/sixgod_shader/ProjectSettings
