--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ __shuo/projects/sixgod_shader/Library
 __shuo/projects/sixgod_shader/Logs
 __shuo/projects/sixgod_shader/Packages
 __shuo/projects/sixgod_shader/ProjectSettings
+__shuo/projects/sixgod_shader/Assets/AmplifyShaderEditor
