--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ __shuo/projects/sixgod_shader/Logs
 __shuo/projects/sixgod_shader/Packages
 __shuo/projects/sixgod_shader/ProjectSettings
 __shuo/projects/sixgod_shader/Assets/AmplifyShaderEditor
+__shuo/projects/sixgod_shader/Temp/UnityLockfile
